[gd_scene load_steps=3 format=3 uid="uid://bnif78if5uie3"]

[ext_resource type="Script" path="res://gdscripts/progress.gd" id="1_p824q"]
[ext_resource type="Script" path="res://gdscripts/Completed.gd" id="2_ydvk1"]

[node name="Progress" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -152.0
offset_bottom = -628.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p824q")

[node name="Completed" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 20.0
color = Color(0, 0.513726, 0.513726, 1)
script = ExtResource("2_ydvk1")

[node name="Total" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1450.0
offset_bottom = 20.0

[connection signal="gui_input" from="Completed" to="." method="_on_completed_gui_input"]
[connection signal="gui_input" from="Total" to="." method="_on_total_gui_input"]
